--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <h1> {{title}} </h1>
-
+<button><b>+</b> nuovo post it</button><br/>
+<textarea></textarea>
+<button>salva</button>
 <ul>
   <!-- 
     *ngFor (abbreviazione di ngForOf) itera sull'array cities e stampa i valori degli oggetti al suoo interno
